# joachim

./: .gitignore  AGENTS.md  Cargo.toml  ROADMAP.md  test_corpus_v0.json  type_annotations_v0.md
.github/workflows/: deploy-api.yml  deploy-ci-runner.yml  joachim-ci.yml  reusable-rust-ci.yml  reusable-start-runner.yml  reusable-stop-runner.yml
crates/joachim-core/: Cargo.toml  README.md
crates/joachim-core/examples/: demo.rs
crates/joachim-core/src/: lib.rs  linkage.rs  parser.rs  scope.rs  types.rs
crates/joachim-core/tests/: integration.rs  parser_properties.proptest-regressions  parser_properties.rs  scope_properties.rs  test_fixtures.rs  type_properties.rs
crates/joachim-lambda/: Cargo.toml  README.md
crates/joachim-lambda/src/: main.rs
crates/joachim-supertag/: Cargo.toml  README.md
crates/joachim-supertag/src/: client.rs  error.rs  extract.rs  lib.rs  prompt.rs  types.rs
crates/joachim-supertag/tests/: canned_and_adversarial.rs  live_integration.rs
crates/joachim-supertag/tests/canned_responses/: adversarial_correct.json  ben_009.json  ben_018.json  inj_001.json  invalid_types.json  malformed.json
infra/pulumi/api/: Pulumi.yaml  README.md  index.ts  package.json
infra/pulumi/ci-runner/: Pulumi.yaml  README.md  index.ts  package-lock.json  package.json
openspec/changes/deploy-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/deploy-pipeline/specs/api-infra/: spec.md
openspec/changes/deploy-pipeline/specs/ci-pipeline/: spec.md
openspec/changes/deploy-pipeline/specs/ci-runner-infra/: spec.md
openspec/changes/pregroup-core/: design.md  proposal.md  tasks.md
openspec/changes/supertagger-client/: design.md  proposal.md  tasks.md
scripts/: sync-ci-runner-vars.sh
(+7 files in other folders)
