[package]
name = "joachim-lambda"
version = "0.1.0"
edition = "2021"
description = "Lambda handler for JOACHIM prompt injection detection API"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
joachim-core = { path = "../joachim-core", features = ["serde"] }
joachim-supertag = { path = "../joachim-supertag" }
lambda_http = "0.13"
lambda_runtime = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
