[package]
name = "joachim-supertag"
version = "0.1.0"
edition = "2021"
description = "LLM-based supertagger for JOACHIM prompt injection detection"

[dependencies]
joachim-core = { path = "../joachim-core", features = ["serde"] }
aws-sdk-bedrockruntime = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
live-test = []
